syntax = "proto3";

package broker.v1;

option go_package = "mini-broker-go/api/proto/gen/brokerv1;brokerv1";

service BrokerService {
  rpc Publish(PublishRequest) returns (PublishResponse);
  rpc Consume(ConsumeRequest) returns (stream Delivery);
  rpc Ack(AckRequest) returns (AckResponse);
  rpc Nack(NackRequest) returns (NackResponse);
}

message PublishRequest {
  string queue = 1;
  bytes payload = 2;
  map<string, string> headers = 3;
  // optional: ttl_ms, routing_key, etc (later)
}

message PublishResponse {
  string message_id = 1;
}

message ConsumeRequest {
  string queue = 1;
  string consumer_id = 2;
  uint32 prefetch = 3; // inflight limit per consumer
}

message Delivery {
  string delivery_id = 1;
  string message_id = 2;
  bytes payload = 3;
  map<string, string> headers = 4;
  uint32 attempt = 5;
  int64 enqueued_unix_ms = 6;
}

message AckRequest {
  string queue = 1;
  string consumer_id = 2;
  string delivery_id = 3;
}

message AckResponse {}

message NackRequest {
  string queue = 1;
  string consumer_id = 2;
  string delivery_id = 3;
  bool requeue = 4;
}

message NackResponse {}